and keep track of all category-tags.
It DOES NOT substitute the  SVN log-message one should put at every
committal in the SVN repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

April 9, 2015 I. Hrivnacova (analysis-V10-00-44)
- Updated to g4tools 1.17.2 (Guy Barrand):
  Changes for Windows (MinGW) - fixing problem #1721 (mainly to change 
  #ifdef WIN32 to #ifdef _MSC_VER, which more clean)

March 18, 2015 I. Hrivnacova (analysis-V10-00-43)
- Fixed reading XML ntuples with a column of a vector type:
  tools do not support direct use of ntuple_bindings with a vector,
  use of a temorary sub-ntuple is needed

March 13, 2015 I. Hrivnacova (analysis-V10-00-42)
- Fixed G4AnalysisManager::IsActive() - now taken into all Hn & Pn
  managers

February 04, 2015 I. Hrivnacova (analysis-V10-01-02)
- Updated to g4tools 1.17.1 (Guy Barrand):
  Fixed resetting histograms;
  see History_tools for the complete list of modifications.

January 21, 2015 I. Hrivnacova (analysis-V10-01-01)
- Updated to g4tools 1.17.0 (Guy Barrand):
  Fixes in the Root files output to be compatible with ROOT 6.02/x;
  see History_tools for the complete list of modifications.

December 5, 2014 G. Cosmo (analysis-V10-01-00)
- Corrected csv/sources.cmake to include missing file:
    G4CsvAnalysisReader.icc

November 24, 2014 I. Hrivnacova (analysis-V10-00-41)
- Fixed update to g4tools 1.16.3:
  the update of g4tools/src/csz_inflate.cc with Coverity fix 
  was missing

November 07, 2014 I. Hrivnacova (analysis-V09-06-33)
- Fixed createH2/setH2 commands implementation
  (was missing in the previous tag V09-06-32)

November 06, 2014 I. Hrivnacova (analysis-V10-00-40)
- Fixed Coverity defect also in Csv, Root ntuple and Xml rntuple managers

November 05, 2014 I. Hrivnacova (analysis-V10-00-39)
- Fixed Coverity defect in G4XmlNtupleManager
